# stock-selector

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/config/: default.yaml  user.yaml.example
backend/src/: bootstrap.py
backend/src/api/: deps.py  main.py
backend/src/api/middleware/: error_handler.py
backend/src/api/routes/: config_routes.py  llm.py  market.py  notification.py  screening.py  user.py
backend/src/api/schemas/: config_dto.py  market.py  screening.py  user.py
backend/src/cli/: main.py
backend/src/cli/commands/: market.py  screening.py  server.py
backend/src/llm/domain/: Analysis.py  ModelProvider.py  Prompt.py  Scenario.py
backend/src/market/application/: QuoteQueryService.py
backend/src/market/domain/: DataSource.py  FinancialData.py  MarketData.py  Stock.py
backend/src/market/infrastructure/: DataSourceRouter.py
backend/src/notification/domain/: Channel.py  MonitorTask.py  PushMessage.py
backend/src/notification/infrastructure/: ChannelFactory.py  NotificationORM.py  SQLiteChannelRepository.py  SQLiteMonitorRepository.py
backend/src/screening/application/: DiscoveryService.py  ScreenStockUseCase.py
backend/src/screening/domain/: Dimension.py  ScreenResult.py
backend/src/screening/infrastructure/: SQLiteScreenResultRepository.py  ScreeningORM.py
backend/src/shared/domain/: Market.py  ScoreTier.py  StockCode.py  TimeRange.py
backend/src/shared/infrastructure/: Database.py
backend/src/user/domain/: User.py
backend/tests/integration/: test_api_smoke.py  test_cli_smoke.py  test_notification.py
(+40 files in other folders)
