[project]
name = "stock-selector"
version = "0.1.0"
description = "A股成长价值选股助手"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "akshare>=1.17",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "duckdb>=1.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
stock-selector = "src.cli.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "pytest-httpx>=0.35",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
